--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <!-- Header to access different parts of the site -->
     <div id="header">
       <div class="sites" id="header1">
-        <a href="google.com">Personal TraQ
+        <a href="https://science-fair-with-the-cools.github.io/EcoTraQ/">Personal TraQ
         </a>
 
       </div>
 
       <div class="sites" id="header2">
-        <a href="google.com">Site TraQ
+        <a href="https://science-fair-with-the-cools.github.io/SiteTraQ/">Site TraQ
         </a>
 
       </div>
