--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
     <!-- Header to access different parts of the site -->
     <div id="header">
       <div class="sites" id="header1">
-        <a href="https://science-fair-with-the-cools.github.io/EcoTraQ/">Personal TraQ
-        </a>
+        <a href="index.html">EcoTraQ</a>
 
-      </div>
+        </div>
 
-      <div class="sites" id="header2">
-        <a href="https://science-fair-with-the-cools.github.io/SiteTraQ/">Site TraQ
-        </a>
+        <div class="sites">
+          <a href="https://science-fair-with-the-cools.github.io/SiteTraQ/">SiteTraQ
+          </a>
 
       </div>
     </div>
@@ -43,7 +42,7 @@
 
     <input type="text" class="website" placeholder="https://www.example.ca"
       style="font-size:1.00rem;width:40vw;text-align:center;margin-right:30%">
-
+    <input id="submit" type="submit">
     <script src="traq.js"></script>
 </body>
 <!-- Footer -->
@@ -52,12 +51,12 @@
   <p id="credits1">Created by: Cameron Lemoine and Hasan Ahmed</p>
   <p id="credits2"> With help from: Will Reavie and Aaron Chung</p>
   <p>
-    <a href="https://github.com/Science-Fair-with-the-cools/EcoTraQ" id=github>GitHub Repository</a>
+    <a href="https://github.com/Science-Fair-with-the-cools/EcoTraQ" id=github target="_blank">GitHub Repository</a>
   <div>
-    <a href="google.com" id="pbpage">ProjectBoard Page</a>
+    <a href="google.com" id="pbpage" target="_blank">ProjectBoard Page</a>
     <div>
       <br>
-      <a href="google.com">Sources</a>
+      <a href="google.com" target="_blank">Sources</a>
     </div>
   </div>
   </p>
