--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <!-- Header to access different parts of the site -->
     <div id="header">
-      <div class="sites" id="header1">
-        <a href="index.html">EcoTraQ</a>
+      <div class="sites">
+        <a href="https://science-fair-with-the-cools.github.io/EcoTraQ/">EcoTraQ</a>
 
         </div>
 
