--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <button onclick="switchLanguage('fr')" id="langbutton-fr">French</button>
 
   <main>
-
+<h1>SiteTraQ</h1>
+    <h3 id="subtitle">A Carbon Footprint Calculator</h3>
     <!-- Header to access different parts of the site -->
     <div id="header">
       <div class="sites">
