--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
 
     <h2>Paste Website Link Here</h2>
 
+    <div id="webcontainer">
     <input type="text" class="website" placeholder="https://www.example.ca"
       style="font-size:1.00rem;width:40vw;text-align:center;margin-right:30%">
     <input id="submit" type="submit">
+  </div>
+
     <script src="traq.js"></script>
 </body>
 <!-- Footer -->
@@ -63,7 +66,6 @@
   </p>
   <div class="buttons">
     <button id="topbtn" onclick="backToTop()">Back to top</button>
-    <button id="footerbtn">SiteTraQ</button>
   </div>
   </main>
 
