--- a/index.html
+++ b/index.html
@@ -34,39 +34,40 @@
     <!-- Brief desc of project -->
     <div id="sitetraqdesc">
       <h2>What is SiteTraQ?</h2>
-      <p>Every single website on the internet has a carbon footprint.Physicl hosting servers use electricity that use
-        non-renewable energy sources to keep our internet alive as we know it. Want to know what a website's annual
-        carbon footprint is? Find out Below!</p>
+      <p>Every single website on the internet has a carbon footprint. Physical hosting servers use electricity that use non-renewable energy sources to keep our internet alive as we know it. Want to know what a website's annual carbon footprint is? Find out by navigating to the "SiteTraQ" tab. 
+        Find out Below!</p>
     </div>
 
     <h2>Paste Website Link Here</h2>
 
-    <div id="webcontainer">
-    <input type="text" class="website" placeholder="https://www.example.ca"
-      style="font-size:1.00rem;width:40vw;text-align:center;margin-right:30%">
+    <input type="text" class="website" placeholder="https://www.example.ca" style="font-size:1.00rem;width:35vw;text-align:center;margin-right:30%">
     <input id="submit" type="submit">
-  </div>
-
+    <div id="result"></div> <!-- This is the div to display the result -->
     <script src="traq.js"></script>
 </body>
-<!-- Footer -->
 <footer>
   <h2 id="about">About:</h2>
+  <p id="credits">Designed completely in HTML, CSS, and JS. All results are to be taken as near estimates based on Canadian/Ontario,
+    average, and national/provincial data. </p>
   <p id="credits1">Created by: Cameron Lemoine and Hasan Ahmed</p>
   <p id="credits2"> With help from: Will Reavie and Aaron Chung</p>
   <p>
-    <a href="https://github.com/Science-Fair-with-the-cools/EcoTraQ" id=github target="_blank">GitHub Repository</a>
+    <a href="https://github.com/Science-Fair-with-the-cools/EcoTraQ" id="github" target="_blank">GitHub Repository</a>
   <div>
-    <a href="google.com" id="pbpage" target="_blank">ProjectBoard Page</a>
+    <a href="https://projectboard.world/ysc/project/ecotraq-carbon-footprint-calculator" id="pbpage" target="_blank">ProjectBoard
+      Page</a>
     <div>
       <br>
-      <a href="google.com" target="_blank">Sources</a>
+      <a href="https://www.dropbox.com/scl/fi/nu5uc4ykhm51pbvhqn26s/Sources-for-Ottawa-Regional-Science-Fair-EcoTraQ.pdf?rlkey=g6tgpyron6yiebu480syyd8or&dl=0" target="_blank">Sources</a>
     </div>
   </div>
   </p>
   <div class="buttons">
     <button id="topbtn" onclick="backToTop()">Back to top</button>
-  </div>
-  </main>
 
+
+  </div>
+</footer>
+</main>
+</body>
 </html>
