--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <input type="text" class="website" placeholder="https://www.example.ca" style="font-size:1.00rem;width:35vw;text-align:center;margin-right:30%">
     <input id="submit" type="submit">
     <div id="result"></div> <!-- This is the div to display the result -->
+    <br>
+    <p>These calculations are estimates based on monthly site traffic multiplied by the average emissions of a mid sized website. Real numbers may be slightly higher or lower based on data capabilities of site.</p>
     <script src="traq.js"></script>
 </body>
 <footer>
