--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- language buttons -->
   <button onclick="switchLanguage('en')" id="langbutton-en">English</button>
-  <button onclick="switchLanguage('fr')" id="langbutton-fr">French</button>
+  <button onclick="switchLanguage('fr')" id="langbutton-fr"><a href="https://science-fair-with-the-cools.github.io/SiteTraqFR/">French</button></a>
 
   <main>
 <h1>SiteTraQ</h1>
