--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <!-- Header to access different parts of the site -->
     <div id="header">
       <div class="sites">
-        <a href="https://science-fair-with-the-cools.github.io/EcoTraQ/">EcoTraQ</a>
+        <a href="https://science-fair-with-the-cools.github.io/Homepage/">Home Page</a>
 
         </div>
 
         <div class="sites">
-          <a href="https://science-fair-with-the-cools.github.io/SiteTraQ/">SiteTraQ
+          <a href="https://science-fair-with-the-cools.github.io/EcoTraQ/">EcoTraQ</a>
           </a>
 
       </div>
