--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div id="result"></div> <!-- This is the div to display the result -->
     <br>
     <p>These calculations are estimates based on monthly site traffic multiplied by the average emissions of a mid sized website. Real numbers may be slightly higher or lower based on data capabilities of site.</p>
+    <p>**NOTE** It can take to 10 seconds in order to display your results. Please be patient and only click "Submit" once</p>
     <script src="traq.js"></script>
 </body>
 <footer>
