--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
     <div id="result"></div> <!-- This is the div to display the result -->
     <br>
-    <p><bold>**NOTE** It can take to 10 seconds in order to display your results. Please be patient and only click "Submit" once</bold></p>
+    <p><strong>**NOTE** It can take to 10 seconds in order to display your results. Please be patient and only click "Submit" once</strong></p>
     <br>
     <p>These calculations are estimates based on monthly site traffic multiplied by the average emissions of a mid sized website. Real numbers may be slightly higher or lower based on data capabilities of site.</p>
   
