--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <div id="result"></div> <!-- This is the div to display the result -->
     <br>
     <div id="context">
-    The websites Carbon Footprint is amde up of many factors. This takes in to account a specific pages specifications. Below are the results for the websit eyou inputed: bounce rate: <span id="bounceRate"></span>, traffic: <span id="traffic"></span>, pages per visit: <span id="pagesPerVisit"></span>
-</div>
+    The websites Carbon Footprint is amde up of many factors. This takes in to account a specific pages specifications. Below are the results for the websit you inputed: </div>
 
     <br>
     <p><strong>**NOTE** It can take to 10 seconds in order to display your results. Please be patient and only click "Submit" once</strong></p>
