--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     <div id="result"></div> <!-- This is the div to display the result -->
     <br>
     <div id="context">
-    The websites Carbon Footprint is amde up of many factors. This takes in to account a specific pages specifications. Below are the results for the websit you inputed: </div>
+    The websites Carbon Footprint is made up of many factors. This takes in to account a specific page specifications, page views, high data content, site traffic, etc.. </div>
 
     <br>
     <p><strong>**NOTE** It can take to 10 seconds in order to display your results. Please be patient and only click "Submit" once</strong></p>
     <br>
-    <p>These calculations are estimates based on monthly site traffic multiplied by the average emissions of a mid sized website. Real numbers may be slightly higher or lower based on data capabilities of site.</p>
+    <p>These calculations are estimates based on monthly site traffic multiplied by the average emissions of a mid-sized website. Real numbers may be slightly higher or lower based on data capabilities of site.</p>
   
     <script src="traq.js"></script>
 </body>
 <footer>
   <h2 id="about">About:</h2>
-  <p id="credits">Designed completely in HTML, CSS, and JS. All results are to be taken as near estimates based on Canadian/Ontario,
-    average, and national/provincial data. </p>
+  <p id="credits">Designed completely in HTML, CSS, and JS. All results are to be taken as near estimates based on Canadian/Ontario
+    averages, and national/provincial data. </p>
   <p id="credits1">Created by: Cameron Lemoine and Hasan Ahmed</p>
   <p id="credits2"> With help from: Will Reavie and Aaron Chung</p>
   <p>
