--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -7,23 +8,20 @@
   <title id="title">EcoTraQ (Carbon footprint calculator)</title>
   <link href="traq.css" rel="stylesheet" type="text/css" />
   <link rel="icon" type="image/x-icon" href="https://www.iconpacks.net/icons/2/free-tree-icon-1578-thumb.png">
+  <link rel="stylesheet" href="traq.css">
 </head>
 </head>
 
 <body>
   <main>
-<h1>SiteTraQ</h1>
-    <h3 id="subtitle">A Carbon Footprint Calculator</h3>
-    <!-- Header to access different parts of the site -->
     <div id="header">
       <div class="sites">
         <a href="https://science-fair-with-the-cools.github.io/Homepage/">Home Page</a>
 
-        </div>
+        <h1>SiteTraQ</h1>
 
-        <div class="sites">
-          <a href="https://science-fair-with-the-cools.github.io/EcoTraQ/">EcoTraQ</a>
-          </a>
+        <a href="https://science-fair-with-the-cools.github.io/EcoTraQ/">EcoTraQ</a>
+        </a>
 
       </div>
     </div>
@@ -44,25 +42,19 @@
     <script src="traq.js"></script>
 </body>
 <footer>
-  <h2 id="about">About:</h2>
-  <p id="credits">Designed completely in HTML, CSS, and JS. All results are to be taken as near estimates based on Canadian/Ontario
-    averages, and national/provincial data. </p>
-  <p id="credits1">Created by: Cameron Lemoine and Hasan Ahmed</p>
-  <p id="credits2"> With help from: Daegan Hartman, Will Reavie, and Aaron Chung</p>
-  <p>
-    <a href="https://github.com/Science-Fair-with-the-cools/EcoTraQ" id="github" target="_blank">GitHub</a>
-  <div>
-    <a href="https://projectboard.world/ysc/project/ecotraq-carbon-footprint-calculator" id="pbpage" target="_blank">ProjectBoard</a>
-    <div>
-      <br>
-      <a href="https://www.dropbox.com/scl/fi/nu5uc4ykhm51pbvhqn26s/Sources-for-Ottawa-Regional-Science-Fair-EcoTraQ.pdf?rlkey=g6tgpyron6yiebu480syyd8or&dl=0" target="_blank">Sources</a>
+    <div id="links">
+      <a href="https://www.instagram.com/ecositetraq/">Instagram</a>
+      <a href="https://partner.projectboard.world/ysc/project/ecotraq-carbon-footprint-calculator-qbmjzj?rc=jdmrnary">ProjectBoard</a>
+      <a href="https://github.com/Science-Fair-with-the-cools/EcoTraQ">GitHub</a>
     </div>
-  </div>
-  </p>
-
-
-  </div>
-</footer>
+    <select id="credits" name="creditsSelect">
+      <option>Credits:</option>
+      <option>Hasan Ahmed</option>
+      <option>Cameron Lemoine</option>
+      <option>Banhan Nguyen</option>
+      <option>Dagan Heartmann</option>
+    </select>
+  </footer>
 </main>
 </body>
 </html>
